--- a/pkg/compose-frontend.yml
+++ b/pkg/compose-frontend.yml
@@ -6,7 +6,9 @@ services:
       caddy: :80
       caddy.redir: /ps/streamlit-demo /ps/streamlit-demo/
       caddy.handle_path: /ps/streamlit-demo/*
-      caddy.handle_path.reverse_proxy: "{{upstreams 80}}"
+      caddy.handle_path.reverse_proxy: "{{upstreams 8501}}"
+    environment:
+      STREAMLIT_SERVER_BASE_URL_PATH: /ps/streamlit-demo
 
 networks:
   caddy-ingress:
