--- a/forklift-repository.yml
+++ b/forklift-repository.yml
@@ -1,6 +1,6 @@
-forklift-version: v0.7.0
+forklift-version: v0.7.2-alpha.1
 
 repository:
   path: github.com/PlanktoScope/streamlit-classification-app
-  description: Forklift package for the PlanktoScope OS
+  description: Forklift package for a demo of the streamlit classification app, with an embedded model
   readme-file: README.md
